2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/PDF-Gestetner.xml,
	db/source/driver/PDF-Infotec.xml,
	db/source/driver/PDF-Lanier.xml,
	db/source/driver/PDF-NRG.xml,
	db/source/driver/PDF-Ricoh.xml,
	db/source/driver/PDF-Savin.xml,
	db/source/driver/Postscript.xml,
	db/source/driver/Postscript1.xml,
	db/source/driver/ap3250.xml,
	db/source/driver/appledmp.xml,
	db/source/driver/bj10.xml,
	db/source/driver/bj10e.xml,
	db/source/driver/bj10v.xml,
	db/source/driver/bj10vh.xml,
	db/source/driver/bj200.xml,
	db/source/driver/bj8XXYYZ.upp.xml,
	db/source/driver/bjc250gs.xml,
	db/source/driver/bjc600.xml,
	db/source/driver/bjc800.xml,
	db/source/driver/bjc880j.xml,
	db/source/driver/c2050.xml,
	db/source/driver/cdj500.xml,
	db/source/driver/cdj550.xml,
	db/source/driver/cdnj500.xml,
	db/source/driver/chp2200.xml,
	db/source/driver/cjet.xml,
	db/source/driver/cljet5.xml,
	db/source/driver/cp50.xml,
	db/source/driver/declj250.xml,
	db/source/driver/deskjet.xml,
	db/source/driver/dj505j.xml,
	db/source/driver/djet500.xml,
	db/source/driver/dnj650c.xml,
	db/source/driver/eplaser-jp.xml,
	db/source/driver/eplaser.xml,
	db/source/driver/eps9high.xml,
	db/source/driver/eps9mid.xml,
	db/source/driver/epson.xml,
	db/source/driver/epsonc.xml,
	db/source/driver/escpage.xml,
	db/source/driver/fmlbp.xml,
	db/source/driver/fmpr.xml,
	db/source/driver/gdi.xml,
	db/source/driver/hl1250.xml,
	db/source/driver/hl7x0.xml,
	db/source/driver/hpijs-pcl3.xml,
	db/source/driver/hpijs-pcl5c.xml,
	db/source/driver/hpijs-pcl5e.xml,
	db/source/driver/ibmpro.xml,
	db/source/driver/imagen.xml,
	db/source/driver/iwhi.xml,
	db/source/driver/jetp3852.xml,
	db/source/driver/jj100.xml,
	db/source/driver/la50.xml,
	db/source/driver/la70.xml,
	db/source/driver/la75.xml,
	db/source/driver/la75plus.xml,
	db/source/driver/laserjet.xml,
	db/source/driver/lbp310.xml,
	db/source/driver/lbp320.xml,
	db/source/driver/lbp8.xml,
	db/source/driver/lex5700.xml,
	db/source/driver/lex7000.xml,