@@ -1,6 +1,6 @@
 <driver id="driver/hplip">
   <name>hplip</name>
-  <url>http://hplipopensource.com/</url>
+  <url>https://developers.hp.com/hp-linux-imaging-and-printing</url>
   <supplier>Hewlett-Packard</supplier>
   <manufacturersupplied>HP|Apollo</manufacturersupplied>
   <license>MIT/BSD/GPL</license>
@@ -28,17 +28,20 @@
   </execution>
   <comments>
     <en>
+      &lt;B&gt;This driver is available in the &lt;A href=&quot;https://github.com/OpenPrinting/hplip-printer-app&quot;&gt;HPLIP Printer Application&lt;/A&gt;&lt;/B&gt;&lt;P&gt;
+&lt;iframe src=&quot;https://snapcraft.io/hplip-printer-app/embedded?button=black&amp;summary=true&quot; frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;300px&quot; style=&quot;border: 1px solid #CCC; border-radius: 2px;&quot;&gt;&lt;/iframe&gt;
 
-   The HP Linux Imaging and Printing (HPLIP) is an HP-developed
+   HP Linux Imaging and Printing (HPLIP) is an HP-developed
    solution for printing, scanning, and faxing with HP inkjet and
    laser based printers in Linux. The HPLIP project provides printing
-   support for over 1,500 printer models, including Deskjet,
-   Officejet, Photosmart, PSC (Print, Scan, Copy), Business Inkjet,
-   (Color) LaserJet, Edgeline MFP, and LaserJet MFP.&lt;P&gt;
+   support for over 3000 printer models, including Deskjet,
+   Officejet, Photosmart, PSC (Print, Scan, Copy), Business Inkjet, Envy,
+   NeverStop, Smart Tank, Tango, DesignJet,
+   (Color) LaserJet, Mopier, Edgeline MFP, and LaserJet MFP.&lt;P&gt;
 
    Note that most HP models are supported, but a few are not. See
    &lt;a
-   href=&quot;http://hplipopensource.com/hplip-web/supported_devices/index.html&quot;&gt;Supported
+   href=&quot;https://developers.hp.com/hp-linux-imaging-and-printing/supported_devices/index&quot;&gt;Supported
    Devices&lt;/a&gt; at the HPLIP website for more
    information.&lt;P&gt;
 
@@ -48,7 +51,8 @@
 
    HPLIP contains two flavors of the printer driver. The default
    driver is the CUPS Raster driver &quot;hpcups&quot; and as alternative the
-   older IJS-based HPIJS driver is still available. In addition there
+   older IJS-based HPIJS driver is still available, but its development and
+   support has been discontinued. In addition there
    are ready-made PPD files for all supported PostScript printers, so
    that they get used in PostScript mode. HPLIP ships updated PPD
    files for all HP printers and both driver flavors. Therefore we do
