@@ -1,5 +1,10 @@
 2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>
 
+	db/source/driver/hplip.xml: Added Snap Store link to HPLIP Printer
+	Application and updated the comments and web site links.
+
+2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>
+
 	db/source/driver/PDF-Gestetner.xml,
 	db/source/driver/PDF-Infotec.xml,
 	db/source/driver/PDF-Lanier.xml,
